HVAC Backup 2/objects/Feedback_Questions__c(1).object
<CustomObject>
    <fields>
        <fullName>Feedback_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feedback Template</label>
        <referenceTo>Feedback_Template__c</referenceTo>
        <relationshipLabel>Feedback Questions</relationshipLabel>
        <relationshipName>Feedback_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <label>Question Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Feedback Question</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Feedback Questions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>